2003-09-30  Zoltan Varga  <vargaz@freemail.hu>

	* AssemblyTest.cs (TestGetType): New regression test for #49114.

2003-05-21  Zoltan Varga  <vargaz@freemail.hu>

	* ModuleTest.cs: New file.

2003-05-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AssemblyTest.cs: New file.

2002-12-30  Sebastien Pouliot <spouliot@videotron.ca>

	* AssemblyNameTest.cs: Added test for FullName (null cultureinfo).

2002-12-23  Sebastien Pouliot <spouliot@videotron.ca>

	* AssemblyNameTest.cs: Added test for non-signed assembly (which
	returns an empty array - i.e. not null like an empty assembly).

2002-12-21  Nick Drochak <ndrochak@gol.com>

	* all: make tests build and run under nunit2

2002-12-08  Sebastien Pouliot <spouliot@videotron.ca>

	* AllTests.cs: Added test suites for AssemblyName and
	StrongNameKeyPair.
	* AssemblyNameTest.cs: New. Test suite for AssemblyName.
	* StrongNameKeyPairTest.cs: New. Test suite for StrongNameKeyPair.